--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "This is an auction-website for my semester project in year 2",
   "main": "index.js",
   "scripts": {
-    "build": "sass src/scss:dist/css"
+    "build": "sass src/scss:dist/css",
+    "watch": "sass --watch src/scss:dist/css && live-server",
+    "start": "npm run build && live-server"
   },
   "repository": {
     "type": "git",
