--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "webuy",
   "version": "1.0.0",
   "description": "This is an auction-website for my semester project in year 2",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "build": "sass src/scss:dist/css",
